--- a/Trailer_NET_API/Trailer_NET_API.csproj
+++ b/Trailer_NET_API/Trailer_NET_API.csproj
@@ -104,6 +104,12 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Trailer_NET_Library\Trailer_NET_Library.csproj">
+      <Project>{baa8073e-49e8-4759-82b7-81f230e0a69f}</Project>
+      <Name>Trailer_NET_Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
