--- a/Trailer_NET_Library/Trailer_NET_Library.csproj
+++ b/Trailer_NET_Library/Trailer_NET_Library.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Genre.cs" />
+    <Compile Include="Entities\Image.cs" />
+    <Compile Include="Entities\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
