--- a/Trailer_NET_Library/Trailer_NET_Library.csproj
+++ b/Trailer_NET_Library/Trailer_NET_Library.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\BaseEntity.cs" />
+    <Compile Include="Abstract\Entity.cs" />
+    <Compile Include="Abstract\IEntity.cs" />
     <Compile Include="Entities\Genre.cs" />
     <Compile Include="Entities\Image.cs" />
     <Compile Include="Entities\Movie.cs" />
