Added image controller

--- a/Trailer_NET_API/Trailer_NET_API.csproj
+++ b/Trailer_NET_API/Trailer_NET_API.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\imagesController.cs" />
     <Compile Include="Controllers\moviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
