--- a/Trailer_NET_DL/Trailer_NET_DL.csproj
+++ b/Trailer_NET_DL/Trailer_NET_DL.csproj
@@ -98,16 +98,18 @@
     <Compile Include="Infrastructure\IDbFactory.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\201804271552308_initial.cs" />
-    <Compile Include="Migrations\201804271552308_initial.Designer.cs">
-      <DependentUpon>201804271552308_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201805032137496_initial.cs" />
+    <Compile Include="Migrations\201805032137496_initial.Designer.cs">
+      <DependentUpon>201805032137496_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EntityBaseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -117,8 +119,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804271552308_initial.resx">
-      <DependentUpon>201804271552308_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805032137496_initial.resx">
+      <DependentUpon>201805032137496_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
