--- a/Trailer_NET_DL/Trailer_NET_DL.csproj
+++ b/Trailer_NET_DL/Trailer_NET_DL.csproj
@@ -102,6 +102,10 @@
     <Compile Include="Migrations\201805130735121_initial.Designer.cs">
       <DependentUpon>201805130735121_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805192023371_someReq.cs" />
+    <Compile Include="Migrations\201805192023371_someReq.Designer.cs">
+      <DependentUpon>201805192023371_someReq.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EntityBaseRepository.cs" />
@@ -121,6 +125,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805130735121_initial.resx">
       <DependentUpon>201805130735121_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805192023371_someReq.resx">
+      <DependentUpon>201805192023371_someReq.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
