--- a/Trailer_NET_API/Web.config
+++ b/Trailer_NET_API/Web.config
@@ -12,7 +12,9 @@
   <connectionStrings>
     <add name="AppDbContext" connectionString="data source=192.168.41.123;initial catalog=ioj0025;user id=sa;password=74502;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="owin:AutomaticAppStartup" value="false" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
