--- a/Trailer_NET_API/Web.config
+++ b/Trailer_NET_API/Web.config
@@ -14,6 +14,9 @@
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
+    <!-- Here,  {0} replaces the video ID -->
+    <add key="youtubeEmbed" value="https://wwww.youtube.com/embed/{0}"/>
+    <add key="youtubeImg" value="https://i1.ytimg.com/vi/{0}/mqdefault.jpg"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
