--- a/Trailer_NET_API/packages.config
+++ b/Trailer_NET_API/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="4.8.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net461" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
