--- a/Trailer_NET_API/Web.config
+++ b/Trailer_NET_API/Web.config
@@ -15,7 +15,7 @@
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
     <!-- Here,  {0} replaces the video ID -->
-    <add key="youtubeEmbed" value="https://wwww.youtube.com/embed/{0}"/>
+    <add key="youtubeEmbed" value="https://www.youtube.com/embed/{0}"/>
     <add key="youtubeImg" value="https://i1.ytimg.com/vi/{0}/mqdefault.jpg"/>
   </appSettings>
   <system.web>
